--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   flutter_highlighter: ^0.1.1
   flutter_html: ^3.0.0
+  flutter_html_table: ^3.0.0
+  flutter_layout_grid: ^2.0.8
   flutter_riverpod: ^2.6.1
   go_router: ^15.2.3
   html_unescape: ^2.0.0
