--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   flutter_layout_grid: ^2.0.8
   flutter_riverpod: ^2.6.1
   go_router: ^15.2.3
+  google_fonts: ^6.2.1
   html_unescape: ^2.0.0
+  hugeicons: ^0.0.11
   macos_secure_bookmarks: ^0.2.1
   markdown: ^7.3.0
   permission_handler: ^12.0.0+1
@@ -34,10 +36,4 @@ flutter:
   fonts:
     - family: JetBrainsMonoNL
       fonts:
-        - asset: assets/fonts/JetBrainsMonoNL-Thin.ttf
-          weight: 300
-        - asset: assets/fonts/JetBrainsMonoNL-Medium.ttf
-          weight: 500
         - asset: assets/fonts/JetBrainsMonoNL-Regular.ttf
-        - asset: assets/fonts/JetBrainsMonoNL-Bold.ttf
-          weight: 700
