--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,13 @@ dependencies:
   file_picker: ^10.2.0
   flutter:
     sdk: flutter
-  flutter_highlighter: ^0.1.1
-  flutter_html: ^3.0.0
-  flutter_html_table: ^3.0.0
-  flutter_layout_grid: ^2.0.8
+  # flutter_highlighter: ^0.1.1
+  flutter_highlight: ^0.7.0
   flutter_riverpod: ^2.6.1
   go_router: ^15.2.3
   google_fonts: ^6.2.1
-  html_unescape: ^2.0.0
   hugeicons: ^0.0.11
   macos_secure_bookmarks: ^0.2.1
-  markdown: ^7.3.0
   # markdown_widget: ^2.3.2+8
   markdown_widget:
     path: ./markdown_widget
