--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
   sdk: ^3.8.0
 
 dependencies:
+  app_links: ^6.4.0
   collection: ^1.19.1
   file_picker: ^10.2.0
   flutter:
     sdk: flutter
-  # flutter_highlighter: ^0.1.1
   flutter_highlight: ^0.7.0
   flutter_riverpod: ^2.6.1
   go_router: ^15.2.3
@@ -24,14 +24,17 @@ dependencies:
     path: ./markdown_widget
   permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
+  uri_content: ^3.0.0
   url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
-  icons_launcher: 3.0.1
   flutter_test:
     sdk: flutter
+  icons_launcher: 3.0.1
 
 flutter:
   uses-material-design: true
+# dependency_overrides:
+#   intent: ^1.4.0
 # dart run icons_launcher:create --path icon_launcher.yaml
