--- a/markdown_widget/pubspec.yaml
+++ b/markdown_widget/pubspec.yaml
@@ -9,7 +9,7 @@ topics:
   - widgets
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -21,14 +21,12 @@ dependencies:
   highlight: ^0.7.0
   flutter_highlight: ^0.7.0
 
-
   # to click link
   url_launcher: ^6.3.1
   # to get the index number on scroll for listview
   visibility_detector: ^0.4.0+2
   # make listview available to jump to index
-  scroll_to_index: ^3.0.1
-
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +38,6 @@ dev_dependencies:
   lints: ^2.1.1
 flutter:
 
-
 screenshots:
-  - description: 'Screenshot 1'
+  - description: "Screenshot 1"
     path: screenshots/screenshot.png
